--- a/shared.css
+++ b/shared.css
@@ -35,7 +35,7 @@ header {
       rgba(108, 108, 108, 0.5),
       rgba(108, 108, 108, 0.5)
     ),
-    url(images/main-banner.jpg) left 0% bottom 60% / cover no-repeat border-box;
+    url(images/main-banner.jpg) left 28% bottom 60% / cover no-repeat border-box;
   background-blend-mode: lighten, normal;
   margin: auto;
   color: rgb(255, 255, 255);
@@ -112,10 +112,10 @@ header {
 .nav__header {
   display: inline-block;
   vertical-align: middle;
-  font-size: 1.8rem;
-  padding: 0 1rem;
+  font-size: 2.4rem;
+  padding: 1rem 0 1rem 1rem;
   filter: none;
-  margin: 0.5rem 0;
+  margin: 1em 0 0.5rem 0;
 }
 
 .nav__header a {
@@ -199,7 +199,7 @@ main {
 
 .headline-container__tagline {
   /* float: right; */
-  font-size:1.5rem;
+  font-size:1.2rem;
   width: 90%;
   margin: auto;
   vertical-align: middle;
@@ -227,7 +227,7 @@ footer {
   margin: auto;
   width: 100%;
   vertical-align: middle;
-  background-color: #b1b1b1;
+  background-color: #535353;
   /* height: 12rem; */
 }
 
@@ -248,8 +248,9 @@ footer {
   /* background-color: white; */
   vertical-align: middle;
   /* border-radius: 0.2rem; */
+  text-align: center;
   margin: auto;
-  padding:1rem;
+
 }
 
 .main-footer__info ul {
@@ -266,7 +267,7 @@ footer {
 }
 
 .main-footer__info-column {
-  width: 25%;
+  width: 100%;
   vertical-align: middle;
   margin: auto;
   padding: 0.5rem 0.5rem;
@@ -276,7 +277,7 @@ footer {
   margin: 0;
   padding-bottom: 0.5rem;
   /* text-align: left; */
-  font-size: 0.9rem;
+  font-size: 1srem;
   font-weight: 600;
 }
 
@@ -297,7 +298,7 @@ footer {
 
 .info-column__link a {
   text-decoration: none;
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   font-weight: 500;
   color: rgb(255, 255, 255);
   vertical-align: middle;
@@ -387,6 +388,7 @@ footer {
 
   .main-footer__info {
     width: 100%;
+    padding:1rem;
   }
 
   .main-footer__info-columns {
@@ -394,6 +396,7 @@ footer {
   }
 
   .main-footer__info-column {
+    width: 25%;
     text-align: left;
     display: inline-block;
   }
